--- a/.github/workflows/tf-lint.yml
+++ b/.github/workflows/tf-lint.yml
@@ -34,7 +34,7 @@ jobs:
       run: tflint --init
       env:
         # https://github.com/terraform-linters/tflint/blob/master/docs/user-guide/plugins.md#avoiding-rate-limiting
-        GITHUB_TOKEN: ${{ github.token }}
+        GIT_TOKEN: ${{ github.token }}
 
     - name: Run TFLint
       run: tflint -f compact
