--- a/.github/workflows/tf-lint.yml
+++ b/.github/workflows/tf-lint.yml
@@ -1,40 +1,13 @@
-name: Lint
+name: Check TFLint
 on:
   push:
-    branches: [ main ]
-  pull_request:
-
+    branches:
+      - "**"
 jobs:
-  tflint:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-
+  format-hcl:
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-      name: Checkout source code
-
-    - uses: actions/cache@v4
-      name: Cache plugin dir
-      with:
-        path: ~/.tflint.d/plugins
-        key: ${{ matrix.os }}-tflint-${{ hashFiles('.tflint.hcl') }}
-
-    - uses: terraform-linters/setup-tflint@v3
-      name: Setup TFLint
-      with:
-        tflint_version: v0.44.1
-
-    - name: Show version
-      run: tflint --version
-
-    - name: Init TFLint
-      run: tflint --init
-      env:
-        # https://github.com/terraform-linters/tflint/blob/master/docs/user-guide/plugins.md#avoiding-rate-limiting
-        GIT_TOKEN: ${{ github.token }}
-
-    - name: Run TFLint
-      run: tflint -f compact
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Check linting of Terraform files
+      uses: devops-infra/action-tflint@v0.3
