--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -27,4 +27,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           # Path to SARIF file relative to the root of the repository
-          sarif_file: tfsec.sarif         
+          sarif_file: tfsec.sarif
+          
+      - name: Set output
+        run: echo "{name}={value}" >> $GITHUB_OUTPUT
